[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "rusty-store-kv"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
redb = "2.1.2"
regex = "1.10.6"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
